CHT-185: Adding EvaluatorSEandImp03